Adding buttons and cleaning code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-        
+    <div class="container">
+      <ul>
+        <li><button class="eraser">Eraser</button></li>
+        <li><button class="draw">Draw</button></li>
+        <li><button class="clear">Clear</button></li>
+        <li><button class="undo">Undo</button></li>
+        <li><button class="redo">Redo</button></li>
+      </ul>
+      
+    </div>
   </body>
 </html>
