Add resizing options

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         <li><button class="clear">Clear</button></li>
         <li><button class="undo">Undo</button></li>
         <li><button class="redo">Redo</button></li>
+        <li><div>
+          <div>resize</div>
+          <ul>
+            <li><button class="re8">8</button></li>
+            <li><button class="re16">16</button></li>
+            <li><button class="re32">32</button></li>
+            <li><button class="re64">64</button></li>
+            <li><button class="re128">128</button></li>
+          </ul>
+        </div></li>
       </ul>
       
     </div>
