Adding color picker non-func

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="container">
       <ul>
         <li><button class="rainbow">RAINBOWMODE!!!</button></li>
-        <li><button class="color">Color</button></li>
+
+        <li><div>
+          <input type="color" id="color" name="color">
+        </div><button class="color">Color</button></li>
         <li><button class="draw">Draw</button></li>
         <li><button class="eraser">Eraser</button></li>
         
