color picker now updates iwth rainbow mode

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
       <ul>
         <li><button class="rainbow">RAINBOWMODE!!!</button></li>
 
-        <li><div>
-          <input type="color" id="color" name="color">
-        </div><button class="color">Color</button></li>
+        <li>
+          <div>
+            <button class="color">Color</button>
+            <input type="color" id="color" name="color" class="current-color">
+          </div>
+        </li>
         <li><button class="draw">Draw</button></li>
         <li><button class="eraser">Eraser</button></li>
         
